# textlog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-04-14-textlog.md
docs/superpowers/specs/: 2026-04-14-textlog-design.md
src/: clipboard.rs  error.rs  filters.rs  macos_perm.rs  main.rs  notifier.rs  ocr.rs  pipeline.rs
src/cli/: args.rs  commands.rs  doctor.rs  mod.rs  perf.rs
src/config/: mod.rs  overlay.rs  schema.rs
src/mcp/: mod.rs  schema.rs  tools.rs
src/service/: launchctl.rs  mod.rs  plist.rs
src/storage/: markdown.rs  mod.rs  sqlite.rs
